karma-viewport-0.4.2 (2017-09-05)

  * Fixed debug context middleware not being registered

karma-viewport-0.4.1 (2017-08-09)

  * Added support to load documents in iframe

karma-viewport-0.4.0 (2017-08-08)

  * Renamed configuration option selector into context

karma-viewport-0.3.0 (2017-08-08)

  * Added support to merge configuration with defaults
  * Added support for customizable viewport element

karma-viewport-0.2.1 (2017-08-01)

  * Fixed undefined variable in middleware

karma-viewport-0.2.0 (2017-08-01)

  * Added iframe usage as a prerequisite
  * Added iframe for debug context
  * Replaced inspect with lightweight version

karma-viewport-0.1.2 (2017-07-08)

  * Fixed Karma plugin integration
  * Added smoke test

karma-viewport-0.1.1 (2017-07-07)

  * Fixed broken Travis build

karma-viewport-0.1.0 (2017-07-07)

  * Initial release